@@ -4,14 +4,20 @@
 New Features:
 
   * Upgrade to Spring Framework 2.5.2.
-  * Significant modifications to the parser to ensure that output exactly
-    matches Mediawiki, including tag placement and newlines.
+  * Significant modifications to the parser to simplify the code and ensure
+    that output is as close as possible to that of Mediawiki, including tag
+    placement, newlines and whitespace.
   * Unit test coverage has been significantly improved.
   * Support added for definition lists of the form "; term : definition".
+  * Utility added to Special:Maintenance to allow exporting internal database
+    data to CSV.
 
 Bugfixes:
+
   * Unbalanced / unclosed HTML tags will now be automatically closed by the
     parser.  Originally reported by Michael Habbert.
+  * Fix an issue that prevented error messages from being correctly reported on
+    the Special:Maintenance page.
 
 
 0.6.5
